# ZBStorage

./: .gitignore  .gitmodules  CMakeLists.txt  Inode256.md  Masstree批量导入设计方案V1.md  Masstree批量导入设计方案V2-光盘镜像位置与统计.md  Masstree稀疏索引改造方案V1.md  PG任务单.md  PG设计方案.md  ZB测试报告.doc  chunk_cleanup_tasklist.md  conf.md  example.cpp  problem.md  readme.md  run.md  test.md  tmp.txt  todo  todo.md  ~$中期测试.docx  中期测试.docx  中期测试报告.md  归档元数据架构设计方案V1.md  归档改动方案.md  简化元数据方案.md  课题一-测试报告-3.doc  课题五测试方案.docx
.report_tmp/: ZB测试报告.txt  中期测试.txt  课题一-测试报告-3.txt  课题五测试方案.txt
BX/: .gitignore  README.md
BX/code/: CMakeLists.txt  README.md
BX/code/include/bx/: bounded_queue.h  chunker.h  config.h  dataset.h  dedup_index.h  engine.h  hasher.h  stats.h  types.h
BX/code/scripts/: generate_perf_report.py  run_bench.sh  run_perf_suite.sh
BX/code/src/: chunker.cpp  config.cpp  dataset.cpp  dedup_index.cpp  engine.cpp  hasher.cpp  main.cpp  stats.cpp
build_check_vs/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
build_codex_check/: CMakeCache.txt
build_codex_vs/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
build_ninja_check/: CMakeCache.txt
build_tmp_meta/: meta_plan_report.md
build_tmp_meta/out_disk_meta/: disk_meta_manifest.txt
build_tmp_meta/out_optical_meta/: optical_disc_catalog.tsv  optical_manifest.tsv  optical_meta_manifest.txt
build_tmp_ninja/: CMakeCache.txt
config/: base.conf  mds.conf  mds.conf.example  mds.conf.mixed  mds.conf.optical  optical_node.conf.example  real_node.conf.example  real_node_mp1.conf  real_node_mp2.conf  real_node_mp3.conf  real_node_pair_primary.conf.example  real_node_pair_secondary.conf.example  scheduler.conf.example  virtual_node.conf.example
deploy/: Dockerfile
deploy/k8s/: real-node-configmap.yaml  real-node-daemonset.yaml  scheduler-configmap.yaml  scheduler-deployment.yaml  virtual-node-configmap.yaml  virtual-node-deployment.yaml
doc/: cur.md  run.md
doc/real node/: readme.md
doc/virtual_node/: readme.md
examples/: masstree_path_list_sample.txt
masstree/: CMakeLists.txt
masstree/index/masstree/: compiler.hh  masstree_get.hh  masstree_tcursor.hh  masstree_wrapper.h  new_scan.hh  small_vector.hh
masstree/src/: 10000inserttest.cpp  Parallel_insertion_test copy 2.cpp  Parallel_insertion_test.cpp  Parallel_insertion_test_dongtai.cpp  Parallel_insertion_test_jingtai.cpp  Parallel_insertion_test_new copy.cpp  Parallel_insertion_test_new.cpp  bloom_test.cpp  recover.cpp  scan_allpath.cpp  scan_infinifs.cpp  scan_test.cpp
scripts/: build_all.sh  common_demo_env.sh  generate_masstree_template.sh  import_masstree_demo.sh  oneclick_cluster_from_meta.sh  oneclick_mount_client.sh  oneclick_start_control_plane.sh  oneclick_start_data_nodes.sh  run_demo_showcase.sh  run_full_e2e_suite.sh  run_import_1000yi_once.sh  run_interaction_rw_test.sh  run_meta_gen_pipeline.sh  run_mixed_with_optical.sh  run_mixed_with_scheduler.sh  run_module_io_smoke.sh  run_system_demo.sh  run_three_real_nodes.sh  start_demo_stack.sh  start_interaction_cluster.sh  test_real_node.sh
src/client/fuse/: zb_fuse_client.cpp
src/client/test/: layout_commit_conflict_test.cpp  optical_archive_stress_test.cpp  pg_migration_sim_test.cpp  real_node_multi_test.cpp  scheduler_control_test.cpp  virtual_node_test.cpp
src/data_node/common/: ObjectStore.h  RealChunkObjectStore.cpp  RealObjectStore.cpp  VirtualChunkObjectStore.cpp  VirtualObjectStore.cpp
src/data_node/optical_node/: README.md
src/data_node/real_node/: README.md
src/data_node/virtual_node/: README.md
src/mds/: README.md
src/mds/allocator/: ChunkAllocator.cpp  ChunkAllocator.h  NodeStateCache.cpp  NodeStateCache.h  ObjectAllocator.cpp  ObjectAllocator.h  PGManager.cpp  PGManager.h
src/mds/archive/: ArchiveBatchStager.cpp  ArchiveBatchStager.h  ArchiveCandidateQueue.h  ArchiveLeaseManager.cpp  ArchiveLeaseManager.h  FileArchiveCandidateQueue.h  OpticalArchiveManager.cpp  OpticalArchiveManager.h
src/mds/archive_meta/: ArchiveBloomFilter.cpp  ArchiveBloomFilter.h  ArchiveDataFile.cpp  ArchiveDataFile.h  ArchiveFormat.h  ArchiveGenerationPublisher.cpp  ArchiveGenerationPublisher.h  ArchiveImportService.cpp  ArchiveImportService.h  ArchiveManifest.cpp  ArchiveManifest.h  ArchiveMetaStore.cpp  ArchiveMetaStore.h  ArchiveNamespaceCatalog.cpp  ArchiveNamespaceCatalog.h  ArchiveSparseIndex.cpp  ArchiveSparseIndex.h
src/mds/common/: SystemMemory.cpp  SystemMemory.h
src/mds/config/: MdsConfig.cpp  MdsConfig.h
src/mds/gc/: GcManager.cpp  GcManager.h
src/mds/masstree_meta/: MasstreeBulkImporter.cpp  MasstreeBulkImporter.h  MasstreeBulkMetaGenerator.cpp  MasstreeBulkMetaGenerator.h  MasstreeDecimalUtils.h  MasstreeGenerationPublisher.cpp  MasstreeGenerationPublisher.h  MasstreeImportService.cpp  MasstreeImportService.h  MasstreeIndexRuntime.cpp  MasstreeIndexRuntime.h  MasstreeInodeRecordCodec.cpp  MasstreeInodeRecordCodec.h  MasstreeManifest.cpp  MasstreeManifest.h  MasstreeMetaStore.cpp  MasstreeMetaStore.h  (+12 more)
src/msg/: mds.proto  real_node.proto  scheduler.proto  status.h  storage_node_messages.h
src/scheduler/: README.md
test/: module_io_smoke_test.cpp
tests/: module_io_smoke_test.cpp
tools/archive_meta/: archive_meta_build_tool.cpp  archive_ns_route_tool.cpp
tools/demo/: demo_logger.cpp  demo_logger.h  demo_menu.cpp  demo_menu.h  demo_params.cpp  demo_params.h  demo_result.cpp  demo_result.h  system_demo_tool.cpp
tools/masstree/: masstree_meta_build_tool.cpp  masstree_meta_generate_tool.cpp  masstree_meta_import_tool.cpp  masstree_ns_route_tool.cpp
tools/meta_gen/: README.md  capacity_planner.cpp  capacity_planner.h  config.h  disk_meta_gen_tool.cpp  disk_meta_generator.cpp  disk_meta_generator.h  file_size_sampler.cpp  file_size_sampler.h  io_utils.h  mds_sst_gen_tool.cpp  mds_sst_generator.cpp  mds_sst_generator.h  mds_sst_ingest_tool.cpp  meta_plan_tool.cpp  namespace_layout_planner.cpp  namespace_layout_planner.h  optical_meta_gen_tool.cpp  optical_meta_generator.cpp  optical_meta_generator.h  placement.h  workload_enumerator.cpp  workload_enumerator.h  任务进度.md
(+72 files in other folders)
